// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Initial Version with value of "2.0" 1`] = `
<div
  className="test"
>
  2.1
</div>
`;

exports[`Initial Version with value of "2.1" 1`] = `
<div
  className="test"
>
  2.1
</div>
`;

exports[`Initial Version with value of "2.2-SNAPSHOT" 1`] = `
<div
  className="test"
>
  2.2-SNAPSHOT
</div>
`;

exports[`Initial Version with value of "null" 1`] = `
<div
  className="test"
>
  2.1
</div>
`;

exports[`Initial Version with value of "undefined" 1`] = `
<div
  className="test"
>
  2.1
</div>
`;
